# src/main/java/com/simpleregisterlogin/dtos/EmailDTO.java
@@ -1,0 +1,14 @@
+package com.simpleregisterlogin.dtos;
+
+public class EmailDTO {
+
+    private String email;
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+}
