# src/main/java/com/simpleregisterlogin/dtos/PasswordDTO.java
@@ -1,0 +1,29 @@
+package com.simpleregisterlogin.dtos;
+
+public class PasswordDTO {
+
+    private String oldPassword;
+
+    private String newPassword;
+
+    public PasswordDTO(String oldPassword, String newPassword) {
+        this.oldPassword = oldPassword;
+        this.newPassword = newPassword;
+    }
+
+    public String getOldPassword() {
+        return oldPassword;
+    }
+
+    public void setOldPassword(String oldPassword) {
+        this.oldPassword = oldPassword;
+    }
+
+    public String getNewPassword() {
+        return newPassword;
+    }
+
+    public void setNewPassword(String newPassword) {
+        this.newPassword = newPassword;
+    }
+}
